# Iceberg-API

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  settings.py
.github/workflows/: test.yml  tests.yml
app/: app.py  authorization.py  crypto.py  database.py  dataclass.py  main.py  models.py  order.py  product.py  repository.py  settings.py  shop_order.py  user.py
tests/: test_app.py  test_authorization.py  test_main.py  test_main_product.py  test_user.py
